--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-header></app-header>
 <div class="container">
 
   <h1 class="my-5 bg-dark text-center text-danger">
     {{ title }}
   </h1>
+
 
 </div>
