--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,15 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+
+    <a class="navbar-brand text-danger" href="#">Drive-X</a>
+
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="#">Voitures</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Pilotes</a>
+        </li>
+
+    </ul>
+
+</nav>
