--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,10 @@
 
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Voitures</a>
+            <a class="nav-link" href="cars">Voitures</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="#">Pilotes</a>
+            <a class="nav-link" href="drivers">Pilotes</a>
         </li>
 
     </ul>
