--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -1,3 +1,22 @@
 <h1 class="my-5">
     Nos Voitures
 </h1>
+
+
+{{ mardiMatin  }}
+
+{{age }} ans age legal de...
+
+
+
+
+<div class="border p-2 bg-dark text-white">
+    <h1>{{ game.title }}</h1>
+    <p>Support: {{ game.support }} </p>
+    <p>Multi: {{ game.multi }} joueurs</p>
+    <p>Stock: {{ getStock()  }} en stocks</p>
+</div>
+
+
+{{ getWakeUp()}}
+
