Custom Property Binding  + @Input

--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -3,28 +3,8 @@
 </h1>
 
 
-{{ mardiMatin  }}
+<app-car-item [enfant]="enfantUn" ></app-car-item>
 
-{{age }} ans age legal de...
+<app-car-item [enfant]="enfantDeux" ></app-car-item>
 
-<h2>Property Binding - Bind = Lié...</h2>
-
-
-<div class=" text-center shadow border p-5 bg-info text-white">
-    <h1>{{ game.title }}</h1>
-    <p>Support: {{ game.support }} </p>
-    <p>Multi: {{ game.multi }} joueurs</p>
-    <p>Stock: {{ getStock()  }} en stocks</p>
-
-    <img [src]="coverImage" alt="{{ game.title}}">
-
-    <button class="my-3 btn btn-success" [disabled]="isNotAvailable()">
-        Commander
-    </button>
-
-    <input class="form-control" type="text" [value]="userEmail" >
-</div>
-
-
-{{ getWakeUp()}}
-
+<app-car-item [enfant]="enfantTrois" ></app-car-item>
