--- a/src/app/cars-list/car-item/car-item.component.html
+++ b/src/app/cars-list/car-item/car-item.component.html
@@ -1,1 +1,3 @@
-<p>Je suis une voiture</p>
+<div class=" p-5  text-center shadow border border-success my-3">
+    <p class="h2" >Je suis {{ enfant }}</p>
+</div>
