Mini TP - Car Item -

--- a/src/app/cars-list/car-item/car-item.component.html
+++ b/src/app/cars-list/car-item/car-item.component.html
@@ -1,1 +1,7 @@
-<p>car-item works!</p>
+
+<div class="p-5 card border-warning m-2">
+
+    <h2>{{vehicule.name}}</h2>
+    <p>{{vehicule.price}}</p>
+
+</div>
