--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -1,3 +1,13 @@
 <h1 class="my-5">
     Nos Voitures
 </h1>
+
+<div class="row">
+
+    <app-car-item [vehicule]="vehiculeOne"></app-car-item>
+
+    <app-car-item [vehicule]="vehiculeTwo"></app-car-item>
+
+    <app-car-item [vehicule]="vehiculeThree"></app-car-item>
+    
+</div>
