--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,3 +7,14 @@
       <a class="btn btn-primary btn-lg" routerLink="cars" role="button">eXotic Cars</a>
     </p>
 </div>
+
+<input type="text" [(ngModel)]="userName">
+
+<h2>Décrivez vous</h2>
+<h2>Aperçu de votre profil</h2>
+
+<div class="card shadow p-5 w-50 m-auto">
+  <h3>{{ userName }} </h3>
+
+
+</div>
