Mise en place de simulation de Update de voiture
A voir plus tard...

--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -2,6 +2,8 @@
     Nos Voitures
 </h1>
 
+<div class="badge badge-dark my-5">Données mise à jour: {{ carUpdate }}</div>
+
 <div class="row">
 
     <app-car-item [vehicule]="vehiculeOne"></app-car-item>
