Update des datas des voitures... NExt

--- a/src/app/cars-list/car-item/car-item.component.html
+++ b/src/app/cars-list/car-item/car-item.component.html
@@ -1,7 +1,9 @@
 
 <div class="p-5 card border-warning m-2">
 
-    <h2>{{vehicule.name}}</h2>
-    <p>{{vehicule.price}}</p>
+    <h2>{{car.name}}</h2>
+    <p>Origine: {{car.pays}}</p>
+    <p>0 à 100 km/h : {{car.perf}} sec </p>
+    <p>Puissance: {{car.power}} CH</p>
 
 </div>
