--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -6,10 +6,10 @@
 
 <div class="row">
 
-    <app-car-item [vehicule]="vehiculeOne"></app-car-item>
+    <app-car-item [car]="carOne"></app-car-item>
 
-    <app-car-item [vehicule]="vehiculeTwo"></app-car-item>
+    <app-car-item [car]="carTwo"></app-car-item>
 
-    <app-car-item [vehicule]="vehiculeThree"></app-car-item>
+    <app-car-item [car]="carThree"></app-car-item>
     
 </div>
