--- a/src/app/cars-list/car-item/car-item.component.html
+++ b/src/app/cars-list/car-item/car-item.component.html
@@ -1,9 +1,9 @@
-
-<div class="p-5 card border-warning m-2">
-
-    <h2>{{car.name}}</h2>
+<div>
+    <p>{{car.name}}</p>
     <p>Origine: {{car.pays}}</p>
     <p>0 à 100 km/h : {{car.perf}} sec </p>
     <p>Puissance: {{car.power}} CH</p>
-
+    <p>{{ bookingMessage }}</p>
+    <button class="btn btn-success" (click)="onBooking()" [disabled]="isBooked">Réserver</button>
+    <hr>
 </div>
