--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -4,7 +4,7 @@
 
 <div class="badge badge-dark my-5">Données mise à jour: {{ carUpdate }}</div>
 
-<div class="row">
+<div>
 
     <app-car-item [car]="carOne"></app-car-item>
 
