--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -2,7 +2,12 @@
     Nos Voitures
 </h1>
 
-<div class="badge badge-dark my-5">Données mise à jour: {{ carUpdate }}</div>
+<div class="badge badge-dark my-5">Données mise à jour: 
+
+     {{ carUpdate | date:"dd MMMM yyyy à H:mm" }}
+    
+
+</div>
 
 <div>
 
