--- a/src/app/drivers-list/drivers-list.component.html
+++ b/src/app/drivers-list/drivers-list.component.html
@@ -1,3 +1,13 @@
 <h1 class="my-5">
     Nos Pilotes
 </h1>
+
+<div *ngIf="isOnline" class=" p-5 card bg-info">
+
+    <p >
+    
+        Thomas a dit à Andrea que...
+    
+    </p>
+
+</div>
