--- a/src/app/drivers-list/drivers-list.component.html
+++ b/src/app/drivers-list/drivers-list.component.html
@@ -2,17 +2,9 @@
     Nos Pilotes
 </h1>
 
-<div *ngIf="isOnline" class="p-5 card bg-info">
 
-    <h2>
-       {{book.title}}
-    </h2>
-
-    <p>{{ book.author }}</p>
-    <p> 
-        <span *ngIf="book.price"> prix: {{book.price}} € </span>
-
-        <span *ngIf="book.price == null"> Non communiqué</span>
-    </p>
-
-</div>
+<ul>
+    <li *ngFor="let game of games">
+        {{game}}
+    </li>
+</ul>
