--- a/src/app/drivers-list/driver-item/driver-item.component.html
+++ b/src/app/drivers-list/driver-item/driver-item.component.html
@@ -1,3 +1,39 @@
-<p> {{driver.likeIts -10 }} </p>
-<i class="fas fa-home fa-3x"></i>
+<div class="card text-center shadow"
+    [ngClass]="{'border-success': driver.likeIts > 0,
+                'border-danger': driver.likeIts < 0 }">
 
+    <div class="card-header bg-dark text-white ">
+        <h2 class="card-title">{{driver.fullName | titlecase }}</h2>
+    </div>
+
+    <div class="card-body">
+
+        <img [src]="driver.coverImage" width="300px" height="150px" class="img-fluid" alt="photo de {{driver.fullName}}">
+        <hr>
+
+        <p>Origine: {{driver.pays | uppercase }}
+            <span *ngIf="driver.pays == null">NC</span>
+        </p>
+
+        <p>Discipline:
+            <span *ngIf="driver.category" [ngClass]="{'badge':true,
+                              'badge-success': driver.category == 'gymkhana',
+                              'badge-warning': driver.category == 'formule 1',
+                              'badge-info': driver.category == 'rallye',
+                              'badge-primary': driver.category == 'nascar',
+                              'badge-danger': driver.category == 'drag'}"
+                              >{{driver.category | titlecase }}</span>
+            <span *ngIf="driver.category == null">NC</span>
+        </p>
+
+        <button class="btn btn-success mx-2 border" (click)="onLike()">
+            <i class="fas fa-thumbs-up"></i>
+        </button>
+        
+        <button class="btn btn-danger border" (click)="onUnlike()">
+            <i class="fas fa-thumbs-down"></i>
+        </button>
+
+    </div>
+</div>
+<hr>
