--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,3 +7,16 @@
       <a class="btn btn-primary btn-lg" routerLink="cars" role="button">eXotic Cars</a>
     </p>
 </div>
+
+
+<h2 class="my-5 text-center">Nos Pilotes d'Exception</h2>
+
+<div class="card-deck  justify-content-center">
+  <app-driver-item  *ngFor="let oneDriver of bestdDrivers" [driver]="oneDriver" ></app-driver-item>
+</div>
+
+<h2 class="my-5 text-center">Nos Meilleures Voitures</h2>
+
+<div class="card-deck  justify-content-center">
+  <app-car-item  *ngFor="let oneCar of bestCars" [car]="oneCar" ></app-car-item>
+</div>
